# whatsoo

./: .clippy.toml  .env  .gitignore  Cargo.toml  README.md  config.toml  rustfmt.toml  schema.sql  whatsoo.postman_collection.json
.github/workflows/: ci.yml
design/: whatsoo.xmind
src/: auth_middleware.rs  main.rs
src/common/: api.rs  auth_middleware.rs  constant.rs  date_format.rs  err.rs  mod.rs  util.rs
src/model/: comment.rs  mod.rs  notice.rs  star.rs  tag.rs  topic.rs  user.rs
src/repository/: mod.rs  topic_repository.rs  user_repository.rs
src/route/: config.rs  mod.rs  topic_route.rs  user_route.rs
src/service/: user_service.rs
src/sql/: mod.rs  user_sql.rs
