[package]
name = "whatsoo"
version = "0.1.0"
authors = ["NOVA-ME <nova-me@whatsoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web
actix-web = "3"
actix-rt = "1"
futures = "0.3.4"

# json
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"

# sqlx
sqlx = { version = "0.5", default-features = false, features = [ "runtime-async-std-native-tls", "macros", "mysql", "chrono" ] }

# chrono
chrono = { version = "0.4", features = ["serde"] }

dotenv = "0.15.0"
env_logger = "0.8"
log = "0.4.8"
anyhow = "1.0.28"
