[package]
name = "whatsoo"
version = "0.1.0"
authors = ["NOVA-ME <nova-me@whatsoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web
actix-web = "3"
futures = "0.3.4"

# jsonwebtoken
jsonwebtoken = "7.2.0"

# json
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"

# sqlx
sqlx = { version = "0.4", default-features = false, features = ["runtime-tokio-native-tls", "macros", "mysql", "chrono"] }

# redis
r2d2_redis = "0.13.0"

# uuid
uuid = { version = "0.8", features = ["serde", "v4"] }

# chrono
chrono = { version = "0.4", features = ["serde"] }

# email
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"

# pwd hash
argon2 = { version = "0.2", features = ["std", "password-hash"] }
rand_core = { version = "0.6", features = ["std"] }

# regex
regex = "1.5"

# lazy_static
lazy_static = "1.4.0"

captcha = "0.0.8"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.8.4"
thiserror = "1.0.26"