[package]
name = "whatsoo"
version = "0.1.0"
authors = ["NOVA-ME <nova-me@whatsoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum
axum = "0.2.3"
tokio = { version = "1.10.0", features = ["full"] }
headers = "0.3.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["add-extension", "compression-br", "trace"] }
async-trait = "0.1.51"

# bytes
bytes = "1.0.1"

# jsonwebtoken
jsonwebtoken = "7.2.0"

# json
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"

# sqlx
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-native-tls", "macros", "mysql", "chrono"] }

# redis
redis = { version = "0.21.0", features = ["r2d2"] }
r2d2 = "0.8.9"

# uuid
uuid = { version = "0.8", features = ["serde", "v4"] }

# chrono
chrono = { version = "0.4", features = ["serde"] }

# email
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"

# pwd hash
argon2 = { version = "0.2", features = ["std", "password-hash"] }
rand_core = { version = "0.6", features = ["std"] }

# regex
regex = "1.5"

# lazy_static
lazy_static = "1.4.0"

captcha = "0.0.8"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.8.4"
thiserror = "1.0.26"